src/main/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userupdate
  namespace: userupdate
  labels:
    app: userupdate
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: userupdate
